--- a/.github/workflows/code_cov.yml
+++ b/.github/workflows/code_cov.yml
@@ -20,7 +20,7 @@ jobs:
     - name: Install dependencies
       run: |
         pip install pytest-cov
-        pip install requirements.txt
+        pip install -r requirements.txt
         echo requirements installed
     - name: Run the tests
       run: |
