--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ jobs:
       # command to install dependencies
       install:
         - pip install pytest
+        - pip install -r requirements.txt
       # command to run tests
       script:
         - cd tests
