--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,6 @@ jobs:
       php:
         - 7.4
       script:
-        - cd /home/travis/build/het-patel99/SRIJAS/Code/Web_app
+        - cd /home/travis/build/hrushabhchouhan/SRIJAS2.0/Code/Web_app
         - php test.php
         
